--- a/SDM_paper_draft.Rmd
+++ b/SDM_paper_draft.Rmd
@@ -19,7 +19,7 @@ author: Keith D.M.^a,b^,  Sameoto J.A.^a^, Keyser F.M.^a^, Andrushchenko I.^a^
 date:  ^a^ Fisheries and Oceans Canada 
        ^b^ Dalhousie University 
        
-abstract: Sustainably managing marine fisheries has long been recognized as a global priority which has proven difficult to achieve.  The reasons sustainable fisheries management goals have not been achieved include various socio-economic, political, and scientific factors.  Scientifically, one of the major challenges has been understanding how environmental factors influence both the spatial and temporal dynamics of a stock. Fisheries science has spent a great deal of effort collecting data, both biological and environmental, which are inherently spatial and temporal in nature. Computational and statistical limitations have resulted in science products which do not fully utilize the spatio-temporal information contained in these data and tend to treat stocks as homogeneous entities.  Fortunately, computational advances coupled with more accessible statistical methods have resulted in new methodologies which can harness the spatio-temporal information contained in these fisheries data.  Here we develop temporally variable species distribution models for yellowtail flounder (*Limanda ferruginea*) and Atlantic cod (*Gadus morhua*) on Georges Bank (GB) using a suite of static environmental covariates and presence-absence information from groundfish trawl surveys in Canada and the United States.  These models indicate there are both seasonal and long term shifts in the distribution of both species.  The average sea surface temperature (SST; average from 1997-2008) and depth were significant predictors of the distribution of both species throughout the year.  Significant shifts in the distribution of both species occurs relatively frequently, with the distribution of cod observed to differ approximately every 5 years, while the Yellowtail distribution appears to fluctuate at least every 3 years. The core areas for both species shifts to the north and east throughout the study period.  Much of this shift is due to the loss of the species from southern and western portions of GB.  The seasonal distribution of cod and yellowtail are relatively consistent throughout the late winter and spring, while in the fall the distribution of cod shifts towards the edge of the bank. For cod there has been a substainal decline in core area within the United States waters on Georges Bank while there has been little change in Canadian waters.  In U.S. waters the yellowtail core area declined rapidly in the late 1970s and early 1980s, but rebounded rapidly in the 1990s and early 2000s, while the core area was unchanged or slowly increased in Canadian waters over this time. These trends have resulted in an increase in the proportion of both stocks in Canadian waters in recent years. The models for both stocks were also relatively successful at predicting the likely location of the stock up to 3 years into the future, in addtion the simplified models which use only the random field for prediction performed as well as the models that included environmental covariates. Here we show how these models are able to provide novel insights into both seasonal and inter-annual variability in species distributions even without the use of environmental covariates. The incorporation of spatial information into science advice will improve our ability to sustainably manage these stocks.  
+abstract: Sustainably managing marine fisheries has long been recognized as a global priority which has proven difficult to achieve.  The reasons sustainable fisheries management goals have not been achieved include various socio-economic, political, and scientific factors.  Scientifically, one of the major challenges has been understanding how spatial and temporal heterogenity in processes impact the populations dynamics of a stock. Fisheries science has spent a great deal of effort collecting data, both biological and environmental, which are inherently spatial and temporal in nature. Computational and statistical limitations have resulted in science products which do not fully utilize the spatio-temporal information contained in these data and tend to treat stocks as homogeneous entities.  Fortunately, computational advances coupled with more accessible statistical methods have resulted in new methodologies which can harness the spatio-temporal information contained in these fisheries data.  Here we develop temporally variable species distribution models for yellowtail flounder (*Limanda ferruginea*) and Atlantic cod (*Gadus morhua*) on Georges Bank (GB) using a suite of static environmental covariates and presence-absence information from groundfish trawl surveys in Canada and the United States.  These models indicate there are both seasonal and long term shifts in the distribution of both species.  The average sea surface temperature (SST; average from 1997-2008) and depth were significant predictors of the distribution of both species throughout the year.  Significant shifts in the distribution of both species occurs relatively frequently, with the distribution of cod observed to differ approximately every 5 years, while the Yellowtail distribution appears to fluctuate at least every 3 years. The core areas for both species shifts to the north and east throughout the study period.  Much of this shift is due to the loss of the species from southern and western portions of GB.  The seasonal distribution of cod and yellowtail are relatively consistent throughout the late winter and spring, while in the fall the distribution of cod shifts towards the edge of the bank. For cod there has been a substainal decline in core area within the United States waters on Georges Bank while there has been little change in Canadian waters.  In U.S. waters the yellowtail core area declined rapidly in the late 1970s and early 1980s, but rebounded rapidly in the 1990s and early 2000s, while the core area was unchanged or slowly increased in Canadian waters over this time. These trends have resulted in an increase in the proportion of both stocks in Canadian waters in recent years. The models for both stocks were also relatively successful at predicting the likely location of the stock up to 3 years into the future, in addtion the simplified models which use only the random field for prediction performed as well as the models that included environmental covariates. Here we show how these models are able to provide novel insights into both seasonal and inter-annual variability in species distributions even without the use of environmental covariates. The incorporation of spatial information into science advice will improve our ability to sustainably manage these stocks.  
 
 ---
 
@@ -885,19 +885,13 @@ yt.dep.peak <- paste0(round(s.dep.peak,digits =0),"-",round(w.dep.peak,digits=0)
 
 # Introduction
 
-Sustainable management of marine fisheries has been recognized as a critical challenge facing society in the 21^st^ century [@cbdAichiBiodiversityTargets2018]. The challenges facing sustainable fisheries management are multifaceted and include complex socio-economic, political, and scientific interactions (CITE). Management of fisheries often focuses on relatively large regions which were delineated as a result of political or geographic considerations rather than biological or ecological rationale.  Within these regions the stocks are often treated as homogeneous entities despite known or assumed spatial heterogeneity in the processes that drive the population dynamics of the stock (CITE).
+Sustainable management of marine fisheries has been recognized as a critical challenge facing society in the 21^st^ century [@cbdAichiBiodiversityTargets2018]. The challenges facing sustainable fisheries management are multifaceted and include complex socio-economic, political, and scientific interactions (CITE). These challenges are compound because fisheries management regions were often delineated as a result of political or geographic considerations rather than biological or ecological rationale.  As a result, the management region can vary from situations in which it encompasses only a small subset of the total population of a species, to situations in which the majority of the stock is manged across a region with significant heterogeneity in the processes that drive the population dynamics. (CITE).
 
-One of the long-standing challenges in fisheries science has been to account for the spatial and temporal heterogeneity in these processes d (CITE).  From the early days of fisheries science it was recognized that an inability to fully account for spatial processes was potentially a serious issues to surmount (CITE). Many of the traditional fisheries methods developed, and still currently used to assess fisheries, require strong assumptions about the underlying spatial processes; during the development of these methods these assumptions were often identified as potentially problematic (CITE Ricker, BH, and maybe Carl and Ray's book). 
+One of the long-standing challenges in fisheries science has been to account for both the spatial and temporal heterogeneity in the processes that drive a stocks population dynamics (CITE).  From the early days of fisheries science it was recognized that an inability to fully account for spatial processes was potentially a serious issues to surmount (CITE). Many of the traditional fisheries methods developed, and still currently used to assess fisheries, require strong assumptions about the underlying spatial processes; during the development of these methods these assumptions were often identified as potentially problematic (CITE Ricker, BH, and maybe Carl and Ray's book). The collection of data in fisheries science, both biological and environmental, is often inherently spatial and temporal in nature, thus the information needed to overcome these challenges is available, it has been computational and statistical limitations that have resulted in science products that do not account for much of the spatio-temporal information contained in these data. 
 
-The collection of data in fisheries science, both biological and environmental, is often inherently spatial and temporal in nature. In the past, computational and statistical limitations have resulted in science products which do not fully utilize the spatio-temporal information contained in these data, for example, SDM applications often average temporally and the year in which the biological data is collected is not accounted for (CITE), while stock assessment methods aggregate information spatially and treat stocks as homogeneous entities (dynamic pools?? CITE).  Fortunately, the aforementioned computational advances coupled with more accessible statistical methods has resulted in new methodologies which can better harness the spatio-temporal information inherent in the data; this is especially relevant in regions in which there is a long history of high quality environmental, ecological, and fishery data collection. 
+In stock assessment, the traditional methods have made assumptions which resulted in the aggregation of information spatially enabling the model to treat the stock as a spatially homogeneous entity (dynamic pools?? CITE). To deal with changes in spatial patterns over time various indices have been developed that provide a measure of temporal changes in spatial distributions of abundance or biomass (CITE Gini, D50, etc). These indices generally measure how evenly a population is distributed across some domain with data that is aggregated at some scale (in fisheries often at the scale of the strata). While these indices provide a synoptic view of how the distribution of abundance or biomass has changed over time, they are unable to provide a detailed understanding of the spatial changes in these distributions. One of the earliest modelling frameworks developed to explicitly account for spatial patterns and processes were SDMs (CITE early SDM work both terrestrial and fisheries). These models use environmental data along with information about the species to map the likelihood of encountering a species across some land(sea)-scape. The concept originated with attempts to map terrestrial plant distributions (CITE) and has been used in the marine realm to assist with the development of Marine Protect Areas (MPAs), MPA networks, and Species at Risk (SAR) (CITE).  In many cases SDMs have assumed that there is no temporal change in the relationship between the environment cues and the response of the species to these cues; these SDM's essentially provide a snapshot in time based on available data. To better predict future states more sophisticated SDM frameworks have been developed in which the underlying relationships can vary both in time and space (CITE). Recent computational advances coupled with more accessible statistical methods has resulted in new methodologies which can more rigorously account for both spatial and temporal processes and more fully utilize the information contained within the data [@aeberhardReviewStateSpaceModels2018; @thorsonGeostatisticalDeltageneralizedLinear2015; @thorsonSpatialDelaydifferenceModels2015; @cadrinDefiningSpatialStructure2020a]. 
 
-A number of methods have subsequently been developed to attempt to account for spatial processes, but computational limitations had restricted the complexity of these models (CITE - Allowing for multiple fleets was one of these).  In more recent years a flurry of computational and statistical advances have enabled the development of models in which spatial processes can be more rigorously addressed within these traditional fisheries modelling frameworks [@aeberhardReviewStateSpaceModels2018; @thorsonGeostatisticalDeltageneralizedLinear2015; @thorsonSpatialDelaydifferenceModels2015; @cadrinDefiningSpatialStructure2020a].
-
-One of the earliest modelling frameworks developed to explicitly account for spatial patterns and processes were species distribution models (SDMs; CITE early SDM work both terrestrial and fisheries). These models use environmental data along information about the species to map the likelihood of encountering a species across some land(sea)-scape and originated with attempts to map terrestrial plant distributions (CITE).  In the marine realm SDM's have been used to assist with the development of Marine Protect Areas (MPAs), MPA networks, Species at Risk (SAR), name some other shit (CITE).  In many cases SDM's assume that there is no temporal change in the relationship between the environment cues and the response of the species to these cues; these SDM's essentially provide a snapshot in time based on available data. To better predict future states more sophisticated SDM frameworks have been developed in which the underlying relationships can vary both in time and space (CITE).
-
-*I need a segue paragraph which I'm not sure what it looks like, maybe something like this?*
-
-
+**So we could have shortest intro ever and jump right to the objectives here and put at least some of this in the methods and/or discussion?**
 
 Georges Bank (GB) has been home to some of the most productive fisheries in the world for centuries and is home to a wealth of natural resources [CITE]. For this reason this area has been host to intensive scientific research programs for decades (CITE SOME STUFF).  This research has resulted in a wealth of scientific knowledge about the geology, environment, and ecology of this area (CITE SOME STUFF). Historically numerous countries had large fisheries in the region but with the expansion of territorial seas to 200 miles offshore in the late 1970's, resource exploitation (e.g. fisheries) on GB fell under the jurisdiction of Canada and the United States (CITE NAFO something). The final demarcation of the Canadian and United States territorial waters on GB were implemented with an International Court of Justice decision in 1984 (CITE). Within three years of this decision both countries had developed their own independent groundfish surveys which each covered the entirety of the bank at different times of the year.
 
